IGNITE-28485 Fix 'illegal reflective access' during control utility startup